--- a/MVC2/validation/src/main/resources/templates/validation/v2/addForm.html
+++ b/MVC2/validation/src/main/resources/templates/validation/v2/addForm.html
@@ -40,7 +40,7 @@
             <input type="text" id="price" th:field="*{price}"
                    th:errorclass="field-error"
                    class="form-control" placeholder="가격을 입력하세요">
-            <div class="field-error" th:errors="*{itemName}">
+            <div class="field-error" th:errors="*{price}">
                 가격 오류
             </div>
         </div>
@@ -48,7 +48,7 @@
             <label for="quantity" th:text="#{label.item.quantity}">수량</label>
             <input type="text" id="quantity" th:field="*{quantity}"
                    th:errorclass="field-error" class="form-control" placeholder="수량을 입력하세요">
-            <div class="field-error" th:errors="*{itemName}">
+            <div class="field-error" th:errors="*{quantity}">
                 수량 오류
             </div>
         </div>
